src/test/ui/on-unimplemented/slice-index.stderr
error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> $DIR/slice-index.rs:8:5
   |
LL |     x[1i32];
   |     ^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `std::slice::SliceIndex<[i32]>` is not implemented for `i32`
   = note: required because of the requirements on the impl of `std::ops::Index<i32>` for `[i32]`

error[E0277]: the type `[i32]` cannot be indexed by `std::ops::RangeTo<i32>`
  --> $DIR/slice-index.rs:9:5
   |
LL |     x[..1i32];
   |     ^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `std::slice::SliceIndex<[i32]>` is not implemented for `std::ops::RangeTo<i32>`
   = note: required because of the requirements on the impl of `std::ops::Index<std::ops::RangeTo<i32>>` for `[i32]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
